Affichage de la liste des stations de velib

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,15 @@
       <h1>Niji Angular Boilerplate</h1>
       <p>{{vm.welcomeMessage}}</p>
       <tabset vertical="true" type="pills">
-        <tab heading="Liste des stations de vélos"></tab>
+        <tab heading="Liste des stations de vélos" >
+          <ul>
+            <li class="stationVelib" data-ng-repeat="station in vm.stations">
+              <a href="#">
+                {{ station.name }}
+              </a>
+            </li>
+          </ul>
+        </tab>
         <tab heading="Lignes de bus"></tab>
       </tabset>
 
