--- a/app/index.html
+++ b/app/index.html
@@ -4,28 +4,14 @@
     <base href="/" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Niji Angular Boilerplate</title>
+    <title>StarAngularJS</title>
     <link rel="stylesheet" href="./css/main.css" />
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
-    <main data-ng-controller="HomeController as vm">
-      <h1>Niji Angular Boilerplate</h1>
-      <p>{{vm.welcomeMessage}}</p>
-      <tabset vertical="true" type="pills">
-        <tab heading="Liste des stations de vélos" >
-          <ul>
-            <li class="stationVelib" data-ng-repeat="station in vm.stations">
-              <a href="#">
-                {{ station.name }}
-              </a>
-            </li>
-          </ul>
-        </tab>
-        <tab heading="Lignes de bus"></tab>
-      </tabset>
 
-    </main>
+    <main data-ui-view></main>
+
     <script src="./js/vendor.js"></script>
     <script src="./js/app.js"></script>
   </body>
