--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,13 @@
   </head>
   <body>
 
-    <main data-ui-view></main>
+    <div class="container">
+      <div class="jumbotron">
+        <h1>StarAngularJS</h1>
+        <p class="message">Bienvenue dans l'application pour la star de Rennes</p>
+      </div>
+      <main data-ui-view></main>
+    </div>
 
     <script src="./js/vendor.js"></script>
     <script src="./js/app.js"></script>
