--- a/app/index.html
+++ b/app/index.html
@@ -20,5 +20,6 @@
 
     <script src="./js/vendor.js"></script>
     <script src="./js/app.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
   </body>
 </html>
