debut de mise en place d'un autocomplete sur les stations velib -> pas fonctionnel a 100%

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <base href="/" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>StarAngularJS</title>
+    <title>VeloStar</title>
     <link rel="stylesheet" href="./css/main.css" />
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
   </head>
@@ -12,7 +12,7 @@
 
     <div class="container">
       <div class="jumbotron">
-        <h1>StarAngularJS</h1>
+        <h1>VeloStar</h1>
         <p class="message">Bienvenue dans l'application pour la star de Rennes</p>
       </div>
       <main data-ui-view></main>
